# tinkernet-cli

./: Cargo.toml  README.md  metadata.scale
src/: error.rs  keystore.rs  main.rs  util.rs
src/commands/: claim.rs  insert_key.rs  mod.rs  youdle_staking_distribution.rs
src/commands/consts/: mod.rs  youdle_consts.rs
