[package]
name = "tinkernet-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.197", features = ["derive"] }
serde_json = "1.0.96"
surf = "2.3.2"
subxt = { git = "https://github.com/paritytech/subxt/", features = ["substrate-compat"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
parity-scale-codec = "3.6.9"
clap = { version = "4.5.4", features = ["derive"] }
rpassword = "7.3.1"
cocoon = "0.4.1"
csv = "1.3.0"
itertools = "0.12.1"
directories = "5.0.1"
thiserror = "1.0.59"
anyhow = "1.0.82"
inquire = "0.7.5"
